2006-10-21  Brian Bidulock  <bidulock@openss7.org>

	* strutil.lsm.in: updated streams release number
	* debian/control.in: updated streams release number
	* doc/man/strutil.refs: updated streams release number
	* debian/control.in: updated LiS release number
	* doc/manual/releases.texi: updated LiS release number

2006-10-12  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: removed redundant debug flags
	* src/drivers/fifo.c: removed redundant debug flags
	* src/drivers/log.c: removed redundant debug flags
	* src/include/sys/strutil/config.h.in: removed redundant debug flags

2006-10-10  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/man/strutil.refs: updates for release

2006-10-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man1/strlog.1.man: update for make check
	* doc/man/man8/strconf.8.man: update for make check

2006-10-05  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/manual/descrip.texi: updates for release
	* doc/manual/news.texi: updates for release

2006-10-02  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: updated release notes
	* Makefile.am: removed AUTOCONFIG_H
	* src/include/Makefile.am: parameterized
	* src/include/sys/strutil/config.h.in: added comments
	* src/include/sys/strutil/version.h.in: added comments

	* strutil.spec.in: corrections, cooked manpages and documentation
	* debian/changelog: notes
	* debian/control.in: mostly text description formatting
	* debian/strutil-core.postrm.in: copyright header updates
	* debian/strutil-core.preinst.in: copyright header updates
	* debian/strutil-core.prerm.in: copyright header updates
	* debian/strutil-devel.preinst.in: copyright header updates
	* debian/strutil-doc.postinst.in: copyright header updates